[package]
name = "sizeplz"
version = "0.1.1"
authors = ["Sam Huddart <samhdev.code@gmail.com>"]
edition = "2018"
description = "A tool to get the size of folders within a directory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.4.0"
features = ["fs", "macros", "rt-multi-thread"]

[dependencies]
clap = "3.0.0-beta.2"
futures = "0.3.13"